# etar-pipeline

./: Makefile  README.md  docker-compose.yml  pyproject.toml
airflow/: Dockerfile-Airflow  Dockerfile-Airflow-test
airflow/config/: airflow.cfg
airflow/dags/: pipeline.py
airflow/tests/: common.py  conftest.py  test_callbacks.py  test_clients.py  test_dag_integrity.py  test_e2e.py  test_integration_report.py  test_integration_stream.py  test_unit_report.py  test_unit_spark.py  test_unit_stream.py
dashboard/: Dockerfile-Dashboard-api  Dockerfile-Dashboard-api-test  Dockerfile-Dashboard-ui  Dockerfile-Dashboard-ui-test  dashboard_api.py  dashboard_ui.py
dashboard/tests/: common.py  test_integration_api.py  test_unit_api.py  test_unit_ui.py
db/: Dockerfile-DB-test
db/tests/: test_clickhouse_schema.py  (+1 more)
env/: airflow.creds  airflow.creds.example  airflow.env.example  clickhouse.creds  clickhouse.creds.example  clickhouse.env  clickhouse.env.example  kafka.env  kafka.env.example  minio.creds  minio.creds.example  minio.env  minio.env.example  postgres.creds.example  postgres.env  postgres.env.example  spark.env  spark.env.example
kafka/: Dockerfile-Connect-helper  clickhouse_connector_configuration.json
producer/: Dockerfile-Producer  Dockerfile-Producer-test  config.py  custom_types.py  producer.py  schema_registry.py  user_event_schema.avsc
spark/: Dockerfile-Spark  Dockerfile-Spark-test
tests/: docker-compose.test.airflow.yml  docker-compose.test.dashboard.yml  docker-compose.test.db.yml  docker-compose.test.producer.yml  docker-compose.test.spark.yml
(+16 files in other folders)
